syntax = "proto3";

package proto;

import "scheduler_transport.proto";

service SchedulerAPI {
  // System routes
  rpc GetSystemInfo(GetSystemInfoRequest) returns (GetSystemInfoResponse);

  // Schedule manipulation
  rpc GenerateSchedule(GenerateScheduleRequest)
      returns (GenerateScheduleResponse);
  rpc CommitSchedule(CommitScheduleRequest) returns (CommitScheduleResponse);

  // Employee manipulation
  rpc ListEmployees(ListEmployeesRequest) returns (ListEmployeesResponse);
  rpc GetEmployee(GetEmployeeRequest) returns (GetEmployeeResponse);
  rpc AddEmployee(AddEmployeeRequest) returns (AddEmployeeResponse);

  // Position manipulation
  rpc ListPositions(ListPositionsRequest) returns (ListPositionsResponse);
  rpc AddPosition(AddPositionRequest) returns (AddPositionResponse);
  rpc GetPosition(GetPositionRequest) returns (GetPositionResponse);
}
